# ktexteditor-paste-selection

./: CMakeLists.txt  PasteSelection.kdev4  README.asciidoc  README.md  kdevpasteselection.json  kdevpasteselection.qrc  kdevpasteselection.rc  ktexteditor_pasteselection.desktop  pasteselectionplugin.cpp  pasteselectionplugin.h  pasteselectionui.rc  pasteselectionview.h
